--- a/agentic-control-demo.html
+++ b/agentic-control-demo.html
@@ -1478,7 +1478,38 @@ ASSISTANT:
         'Epic MCP (discharge event + bundle)',
         'EMR CSVs (risk scores + diagnosis)',
         'Discharge Readiness Agent (final JSON)',
-        'Clinician review & bundle selection'
+        'Clinician review & bundle selection',
+        // Governance / safety / policy agents supervising the flow
+        'Gov: Regulatory Compliance Agent',
+        'Gov: Policy Guardrail Agent',
+        'Gov: Privacy & Data-Handling Agent',
+        'Gov: Model Drift Detection Agent',
+        'Gov: Operational Risk Agent',
+        'Gov: Safety Alignment Agent',
+        'Gov: Reason Trace Agent',
+        'Gov: Audit Trail Agent',
+        'Gov: Version & Change Control Agent',
+        'Gov: Context Validator Agent',
+        'Gov: Context Drift Agent',
+        'Gov: Ontology Alignment Agent',
+        'Gov: Continuous Improvement Agent',
+        'Gov: Quality Assurance Agent',
+        'Gov: Outcome Consistency Agent',
+        'Gov: Identity & Role Verification Agent',
+        'Gov: Secrets Management Agent',
+        'Gov: Threat Detection Agent',
+        'Gov: Decision Escalation Agent',
+        'Gov: Approval Workflow Agent',
+        'Gov: Supervisor Agent',
+        'Gov: Model Performance Monitoring Agent',
+        'Gov: Retraining & Refresh Agent',
+        'Gov: Model Routing Agent',
+        'Gov: Data Quality Agent',
+        'Gov: Lineage Tracking Agent',
+        'Gov: Retention & Archival Agent',
+        'Gov: Interoperability Agent',
+        'Gov: Exception Routing Agent',
+        'Gov: AI Product Guardrail Agent'
       ],
       hd_step2: [
         'Hospital Discharge UI',
@@ -1487,7 +1518,38 @@ ASSISTANT:
         'EMR meds CSVs (home / inpatient / discharge)',
         'LLM (reconciliation plan)',
         'Medication Reconciliation Agent (structured diff)',
-        'Pharmacist & patient counselling'
+        'Pharmacist & patient counselling',
+        // Governance / safety / policy agents supervising the flow
+        'Gov: Regulatory Compliance Agent',
+        'Gov: Policy Guardrail Agent',
+        'Gov: Privacy & Data-Handling Agent',
+        'Gov: Model Drift Detection Agent',
+        'Gov: Operational Risk Agent',
+        'Gov: Safety Alignment Agent',
+        'Gov: Reason Trace Agent',
+        'Gov: Audit Trail Agent',
+        'Gov: Version & Change Control Agent',
+        'Gov: Context Validator Agent',
+        'Gov: Context Drift Agent',
+        'Gov: Ontology Alignment Agent',
+        'Gov: Continuous Improvement Agent',
+        'Gov: Quality Assurance Agent',
+        'Gov: Outcome Consistency Agent',
+        'Gov: Identity & Role Verification Agent',
+        'Gov: Secrets Management Agent',
+        'Gov: Threat Detection Agent',
+        'Gov: Decision Escalation Agent',
+        'Gov: Approval Workflow Agent',
+        'Gov: Supervisor Agent',
+        'Gov: Model Performance Monitoring Agent',
+        'Gov: Retraining & Refresh Agent',
+        'Gov: Model Routing Agent',
+        'Gov: Data Quality Agent',
+        'Gov: Lineage Tracking Agent',
+        'Gov: Retention & Archival Agent',
+        'Gov: Interoperability Agent',
+        'Gov: Exception Routing Agent',
+        'Gov: AI Product Guardrail Agent'
       ],
       hd_step3: [
         'Hospital Discharge UI',
@@ -1544,7 +1606,38 @@ ASSISTANT:
         'HCA Provider Directory (MCP)',
         'Epic MCP (messages / tasks)',
         'GP / Community services',
-        'Clinician & GP review'
+        'Clinician & GP review',
+        // Governance / safety / policy agents supervising the flow
+        'Gov: Regulatory Compliance Agent',
+        'Gov: Policy Guardrail Agent',
+        'Gov: Privacy & Data-Handling Agent',
+        'Gov: Model Drift Detection Agent',
+        'Gov: Operational Risk Agent',
+        'Gov: Safety Alignment Agent',
+        'Gov: Reason Trace Agent',
+        'Gov: Audit Trail Agent',
+        'Gov: Version & Change Control Agent',
+        'Gov: Context Validator Agent',
+        'Gov: Context Drift Agent',
+        'Gov: Ontology Alignment Agent',
+        'Gov: Continuous Improvement Agent',
+        'Gov: Quality Assurance Agent',
+        'Gov: Outcome Consistency Agent',
+        'Gov: Identity & Role Verification Agent',
+        'Gov: Secrets Management Agent',
+        'Gov: Threat Detection Agent',
+        'Gov: Decision Escalation Agent',
+        'Gov: Approval Workflow Agent',
+        'Gov: Supervisor Agent',
+        'Gov: Model Performance Monitoring Agent',
+        'Gov: Retraining & Refresh Agent',
+        'Gov: Model Routing Agent',
+        'Gov: Data Quality Agent',
+        'Gov: Lineage Tracking Agent',
+        'Gov: Retention & Archival Agent',
+        'Gov: Interoperability Agent',
+        'Gov: Exception Routing Agent',
+        'Gov: AI Product Guardrail Agent'
       ],
       hd_step5: [
         'Hospital Discharge UI',
@@ -1554,7 +1647,38 @@ ASSISTANT:
         'Agent: Monitoring (rules & alerts)',
         'Avatar / SMS channel',
         'Patient responses',
-        'Clinician escalation queue'
+        'Clinician escalation queue',
+        // Governance / safety / policy agents supervising the flow
+        'Gov: Regulatory Compliance Agent',
+        'Gov: Policy Guardrail Agent',
+        'Gov: Privacy & Data-Handling Agent',
+        'Gov: Model Drift Detection Agent',
+        'Gov: Operational Risk Agent',
+        'Gov: Safety Alignment Agent',
+        'Gov: Reason Trace Agent',
+        'Gov: Audit Trail Agent',
+        'Gov: Version & Change Control Agent',
+        'Gov: Context Validator Agent',
+        'Gov: Context Drift Agent',
+        'Gov: Ontology Alignment Agent',
+        'Gov: Continuous Improvement Agent',
+        'Gov: Quality Assurance Agent',
+        'Gov: Outcome Consistency Agent',
+        'Gov: Identity & Role Verification Agent',
+        'Gov: Secrets Management Agent',
+        'Gov: Threat Detection Agent',
+        'Gov: Decision Escalation Agent',
+        'Gov: Approval Workflow Agent',
+        'Gov: Supervisor Agent',
+        'Gov: Model Performance Monitoring Agent',
+        'Gov: Retraining & Refresh Agent',
+        'Gov: Model Routing Agent',
+        'Gov: Data Quality Agent',
+        'Gov: Lineage Tracking Agent',
+        'Gov: Retention & Archival Agent',
+        'Gov: Interoperability Agent',
+        'Gov: Exception Routing Agent',
+        'Gov: AI Product Guardrail Agent'
       ],
       hd_step6: [
         'Hospital Discharge UI',
@@ -1563,7 +1687,38 @@ ASSISTANT:
         'EMR outcome CSVs',
         'LLM (cohort KPIs + narrative)',
         'Governance dashboard',
-        'Quality & safety review board'
+        'Quality & safety review board',
+        // Governance / safety / policy agents supervising the flow
+        'Gov: Regulatory Compliance Agent',
+        'Gov: Policy Guardrail Agent',
+        'Gov: Privacy & Data-Handling Agent',
+        'Gov: Model Drift Detection Agent',
+        'Gov: Operational Risk Agent',
+        'Gov: Safety Alignment Agent',
+        'Gov: Reason Trace Agent',
+        'Gov: Audit Trail Agent',
+        'Gov: Version & Change Control Agent',
+        'Gov: Context Validator Agent',
+        'Gov: Context Drift Agent',
+        'Gov: Ontology Alignment Agent',
+        'Gov: Continuous Improvement Agent',
+        'Gov: Quality Assurance Agent',
+        'Gov: Outcome Consistency Agent',
+        'Gov: Identity & Role Verification Agent',
+        'Gov: Secrets Management Agent',
+        'Gov: Threat Detection Agent',
+        'Gov: Decision Escalation Agent',
+        'Gov: Approval Workflow Agent',
+        'Gov: Supervisor Agent',
+        'Gov: Model Performance Monitoring Agent',
+        'Gov: Retraining & Refresh Agent',
+        'Gov: Model Routing Agent',
+        'Gov: Data Quality Agent',
+        'Gov: Lineage Tracking Agent',
+        'Gov: Retention & Archival Agent',
+        'Gov: Interoperability Agent',
+        'Gov: Exception Routing Agent',
+        'Gov: AI Product Guardrail Agent'
       ],
     };
 
@@ -1593,37 +1748,36 @@ ASSISTANT:
       header.innerHTML = `<span style="font-weight:600;">${label}</span><span style="color:var(--muted);">${runId}</span>`;
       row.appendChild(header);
 
+      // Split core process vs governance/safety agents so we can draw a
+      // "business process" lane with a surrounding purple control mesh.
+      const coreNodes = nodes.filter(n => typeof n === 'string' && !n.startsWith('Gov:'));
+      const govNodes = nodes.filter(n => typeof n === 'string' && n.startsWith('Gov:'));
+
+      // Main process lane (UI / Agents / LLM / MCP / humans)
       const flow = document.createElement('div');
       flow.style.display = 'flex';
       flow.style.flexWrap = 'wrap';
       flow.style.alignItems = 'center';
       flow.style.gap = '4px';
-      nodes.forEach((n, idx) => {
+      coreNodes.forEach((n, idx) => {
         const node = document.createElement('span');
         node.textContent = n;
         node.style.padding = '2px 8px';
         node.style.borderRadius = '999px';
 
         const isAgent = typeof n === 'string' && n.startsWith('Agent:');
-        const isGov = typeof n === 'string' && n.startsWith('Gov:');
         if (isAgent) {
           // Highlight small, purpose-built agents in amber so
           // multi-agent orchestration is visually obvious.
           node.style.background = '#fef3c7';
           node.style.border = '1px solid #fbbf24';
           node.style.color = '#92400e';
-        } else if (isGov) {
-          // Governance / safety / policy agents get a distinct purple style
-          // to emphasise the independent control mesh around transactional agents.
-          node.style.background = '#f3e8ff';
-          node.style.border = '1px solid #a855f7';
-          node.style.color = '#6b21a8';
         } else {
-          node.style.background = idx === 0 ? '#e0f2fe' : (idx === nodes.length - 1 ? '#ecfdf5' : '#eef2ff');
+          node.style.background = idx === 0 ? '#e0f2fe' : (idx === coreNodes.length - 1 ? '#ecfdf5' : '#eef2ff');
           node.style.border = '1px solid #d4d4d8';
         }
         flow.appendChild(node);
-        if (idx < nodes.length - 1) {
+        if (idx < coreNodes.length - 1) {
           const arrow = document.createElement('span');
           arrow.textContent = '➜';
           arrow.style.color = '#6b7280';
@@ -1631,6 +1785,145 @@ ASSISTANT:
         }
       });
       row.appendChild(flow);
+
+      // Surrounding governance / safety / policy mesh row
+      if (govNodes.length) {
+        const govRow = document.createElement('div');
+        govRow.style.display = 'flex';
+        govRow.style.flexWrap = 'wrap';
+        govRow.style.alignItems = 'center';
+        govRow.style.gap = '6px';
+        govRow.style.marginTop = '4px';
+
+        // Conceptual central process node that governance agents connect to
+        const processNode = document.createElement('span');
+        processNode.textContent = 'Core step execution';
+        processNode.style.padding = '2px 10px';
+        processNode.style.borderRadius = '999px';
+        processNode.style.background = '#e5e7eb';
+        processNode.style.border = '1px solid #d4d4d8';
+        processNode.style.color = '#374151';
+
+        const govSet = new Set(govNodes);
+        const govGroups = [
+          {
+            label: 'Policy & Compliance Agents',
+            members: [
+              'Gov: Regulatory Compliance Agent',
+              'Gov: Policy Guardrail Agent',
+              'Gov: Privacy & Data-Handling Agent',
+            ],
+          },
+          {
+            label: 'Risk, Safety & Drift Control Agents',
+            members: [
+              'Gov: Model Drift Detection Agent',
+              'Gov: Operational Risk Agent',
+              'Gov: Safety Alignment Agent',
+            ],
+          },
+          {
+            label: 'Auditability & Traceability Agents',
+            members: [
+              'Gov: Reason Trace Agent',
+              'Gov: Audit Trail Agent',
+              'Gov: Version & Change Control Agent',
+            ],
+          },
+          {
+            label: 'Context Integrity & Semantic Control Agents',
+            members: [
+              'Gov: Context Validator Agent',
+              'Gov: Context Drift Agent',
+              'Gov: Ontology Alignment Agent',
+            ],
+          },
+          {
+            label: 'Quality, Optimisation & Improvement Agents',
+            members: [
+              'Gov: Continuous Improvement Agent',
+              'Gov: Quality Assurance Agent',
+              'Gov: Outcome Consistency Agent',
+            ],
+          },
+          {
+            label: 'Security & Access Control Agents',
+            members: [
+              'Gov: Identity & Role Verification Agent',
+              'Gov: Secrets Management Agent',
+              'Gov: Threat Detection Agent',
+            ],
+          },
+          {
+            label: 'Human-in-the-Loop Governance Agents',
+            members: [
+              'Gov: Decision Escalation Agent',
+              'Gov: Approval Workflow Agent',
+              'Gov: Supervisor Agent',
+            ],
+          },
+          {
+            label: 'Model Lifecycle & Performance Agents',
+            members: [
+              'Gov: Model Performance Monitoring Agent',
+              'Gov: Retraining & Refresh Agent',
+              'Gov: Model Routing Agent',
+            ],
+          },
+          {
+            label: 'Data Governance & Quality Agents',
+            members: [
+              'Gov: Data Quality Agent',
+              'Gov: Lineage Tracking Agent',
+              'Gov: Retention & Archival Agent',
+            ],
+          },
+          {
+            label: 'Coordination & Ecosystem Agents',
+            members: [
+              'Gov: Interoperability Agent',
+              'Gov: Exception Routing Agent',
+              'Gov: AI Product Guardrail Agent',
+            ],
+          },
+        ];
+
+        govGroups.forEach(group => {
+          const present = group.members.filter(m => govSet.has(m));
+          if (!present.length) return;
+
+          // Group label
+          const labelSpan = document.createElement('span');
+          labelSpan.textContent = group.label;
+          labelSpan.style.fontSize = '11px';
+          labelSpan.style.fontWeight = '600';
+          labelSpan.style.color = '#6b21a8';
+          labelSpan.style.marginRight = '2px';
+          govRow.appendChild(labelSpan);
+
+          present.forEach(m => {
+            const gov = document.createElement('span');
+            gov.textContent = m;
+            gov.style.padding = '2px 8px';
+            gov.style.borderRadius = '999px';
+            gov.style.background = '#f3e8ff';
+            gov.style.border = '1px solid #a855f7';
+            gov.style.color = '#6b21a8';
+
+            // Each governance agent has a bidirectional relationship with the
+            // core process node: Gov ⇄ Core.
+            const arrowIn = document.createElement('span');
+            arrowIn.textContent = '↔';
+            arrowIn.style.color = '#6b7280';
+
+            govRow.appendChild(gov);
+            govRow.appendChild(arrowIn);
+          });
+        });
+
+        govRow.appendChild(processNode);
+        row.appendChild(govRow);
+      }
 
       // Append without clearing previous runs
       panel.appendChild(row);
