--- a/agentic-control-demo.html
+++ b/agentic-control-demo.html
@@ -996,6 +996,14 @@ You must:
 - Flag high-risk medicines explicitly (e.g., anticoagulants, insulin, opioids).
 - Avoid changing orders yourself – you only RECOMMEND and EXPLAIN.
 
+For the final discharge medication list you output, you MUST, for each medication,
+provide a short natural language field simple_description that:
+- briefly describes what the medication is for, AND
+- summarises the top 3 patient-relevant risks or monitoring points.
+
+This simple_description field is used directly in the clinician and patient-facing
+natural language output. Keep it to one or two sentences, plain language.
+
 CONTEXT:
 - Home medications before admission:
 {{home_meds_context}}       # from EMR_HOME_MEDICATIONS
@@ -1023,19 +1031,45 @@ ASSISTANT:
 3) Create patient-friendly education points (short, simple language):
    - 1–3 bullets per high-risk or clinically important medicine.
 
-4) Output strict JSON only:
+4) Output strict JSON only, where reconciliation lists are arrays of medication
+   OBJECTS, not bare strings, and each object includes simple_description:
 
 {
   "patient_id": "<PATIENT_ID>",
   "encounter_id": "<ENCOUNTER_ID>",
   "reconciliation": {
-    "continued": ["<drug A>", "<drug B>"],
-    "stopped": ["<drug C>"],
-    "started": ["<drug D>"],
+    "continued": [
+      {
+        "medication_name": "<name>",
+        "dose": "<dose>",
+        "route": "<route>",
+        "frequency": "<frequency>",
+        "simple_description": "<one or two sentences: what it is for + top 3 risks>"
+      }
+    ],
+    "stopped": [
+      {
+        "medication_name": "<name>",
+        "dose": "<dose>",
+        "route": "<route>",
+        "frequency": "<frequency>",
+        "simple_description": "<one or two sentences: what it is for + top 3 risks>"
+      }
+    ],
+    "started": [
+      {
+        "medication_name": "<name>",
+        "dose": "<dose>",
+        "route": "<route>",
+        "frequency": "<frequency>",
+        "simple_description": "<one or two sentences: what it is for + top 3 risks>"
+      }
+    ],
     "changed": [
       {
         "medication": "<name>",
-        "change": "<brief description>"
+        "change": "<brief description>",
+        "simple_description": "<one or two sentences: what it is for + top 3 risks>"
       }
     ]
   },
